--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "1.0.0",
   "description": "A minimal Node.js web application.",
   "main": "app.js",
+  "type": "module",
   "author": "alphasec",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2"
+    "connect-flash": "^0.1.1",
+    "express": "^4.19.2",
+    "express-list-endpoints": "^7.1.1",
+    "express-session": "^1.18.1",
+    "morgan-body": "^2.6.9",
+    "passport": "^0.7.0"
   },
   "scripts": {
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000",
+    "dev": "nodemon src/app.js",
     "start": "node app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
